--- a/src/Login.css
+++ b/src/Login.css
@@ -56,12 +56,27 @@
   border-color: #a88734 #9c7e31 #846a29;
 }
 
+.login__registerButton,.login__signInButton{
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  box-shadow: 0 2px #999;
+}
+
+.login__signInButton:active,
+.login__registerButton:active {
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  box-shadow: 0 2px #666;
+  transform: translateY(4px);
+}
 
 .login__registerButton {
-    border-radius: 2px;
-    width: 100%;
-    height: 30px;
-    border: 1px solid;
-    margin-top: 10px;
-    border-color: darkgray;
+  border-radius: 2px;
+  width: 100%;
+  height: 30px;
+  border: 1px solid;
+  margin-top: 10px;
+  border-color: darkgray;
 }
