--- a/src/Product.css
+++ b/src/Product.css
@@ -1,41 +1,51 @@
 .product {
-    display: flex;
-    flex-direction: column;   
-    align-items: center;
-    justify-content: flex-end;
-    margin: 10px;
-    padding: 20px;
-    width: 100%;
-    max-height: 400px;
-    min-width: 100px;
-    background-color: white;
-    z-index: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  margin: 10px;
+  padding: 20px;
+  width: 100%;
+  max-height: 400px;
+  min-width: 100px;
+  background-color: white;
+  z-index: 1;
 }
 
 .product__price {
-    margin-top: 5px;
+  margin-top: 5px;
 }
 
 .product__info {
-
-    height: 100px;
-    margin-bottom: 15px;
+  height: 100px;
+  margin-bottom: 15px;
 }
 
 .product > img {
-    max-height: 200px;
-    width: 100%;
-    object-fit: contain;
-    margin-bottom: 15px;
+  max-height: 200px;
+  width: 100%;
+  object-fit: contain;
+  margin-bottom: 15px;
 }
 
 .product > button {
-    background: #f0c14b;
-    border: 1px solid;
-    margin-top: 10px;
-    border-color: #a88734 #9c7e31 #846a29;
+  background: #f0c14b;
+  border: 1px solid;
+  margin-top: 10px;
+  border-color: #a88734 #9c7e31 #846a29;
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  color: black;
+  border-radius: 15px;
+  box-shadow: 0 2px #999;
+}
+
+.product > button:active {
+    box-shadow: 0 2px #666;
+    transform: translateY(4px);
 }
 
 .product__rating {
-    display: flex;
+  display: flex;
 }
