--- a/src/Product.css
+++ b/src/Product.css
@@ -1,7 +1,6 @@
 .product {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: flex-end;
   margin: 10px;
   padding: 20px;
@@ -19,6 +18,7 @@
 .product__info {
   height: 100px;
   margin-bottom: 15px;
+  align-items: left;
 }
 
 .product > img {
@@ -29,6 +29,8 @@
 }
 
 .product > button {
+  align-items: center;
+  width: 30%;
   background: #f0c14b;
   border: 1px solid;
   margin-top: 10px;
