[closes #29]:implementation of about us page

--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.order__body
+{
+    background-color:#E9F9F9;
+}
